upload nft collection and allignment issues fixed
upload nft alignment issue is fixed

--- a/frontend-hyprclub/src/components/UploadNFT/UploadNFT/UploadNFT.module.css
+++ b/frontend-hyprclub/src/components/UploadNFT/UploadNFT/UploadNFT.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-    width: 100%;
+    width: 93%;
     height: auto;
     background: #FFFFFF;
     box-shadow: -13px 13px 26px rgba(242, 242, 242, 0.2), 13px -13px 26px rgba(242, 242, 242, 0.2), -13px -13px 26px rgba(255, 255, 255, 0.9), 13px 13px 33px rgba(242, 242, 242, 0.9), inset 1px 1px 2px rgba(255, 255, 255, 0.3), inset -1px -1px 2px rgba(242, 242, 242, 0.5);
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    margin: 10px auto;
     padding: 60px 88px;
 }
 
@@ -118,22 +119,27 @@
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 12px;    
     text-transform: uppercase;
     color: #B1B5C4;
     margin: 0;
 }
 
 .Input {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 12px 16px;
-    width: 100%;
-    height: 48px;
-    border: 2px solid #E6E8EC;
-    box-sizing: border-box;
-    border-radius: 12px;
+    display: flex!important;
+    flex-direction: row!important;
+    align-items: flex-start!important;
+    padding: 12px 16px!important;
+    width: 100%!important;
+    height: 48px!important;
+    border: 2px solid #E6E8EC!important;
+    box-sizing: border-box!important;
+    border-radius: 12px!important;
+    outline: none !important;
+}
+.Input:focus{
+    box-shadow: none;
+    outline: none;
 }
 
 .Item_stck_prc {
@@ -149,19 +155,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 12px;
-}
-
-.Input_1 {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 12px 16px;
-    width: 100%;
-    height: 48px;
-    border: 2px solid #E6E8EC;
-    box-sizing: border-box;
-    border-radius: 12px;
-    margin: 0;
 }
 
 .ItemDesc {
@@ -184,10 +177,11 @@
     box-sizing: border-box;
     border-radius: 12px;
     margin: 12px 0 0 0;
+    outline:none;
 }
 
-.Input:hover, .Input_1:hover, .Input_Description:hover {
-    border: 2px solid #d2d2d2 !important;
+.Input:hover, .Input_Description:hover {
+    border: 2px solid #dbdbdb !important;
 }
 
 .note {
@@ -209,7 +203,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 12px;
+    gap: 7px;
     margin-bottom: 10px;
 }
 
@@ -302,6 +296,7 @@
     display: flex !important;
     align-items: center !important;
     color: #23262F !important;
+    box-shadow: none!important;
 }
 
 .Bottom {
