--- a/frontend-hyprclub/src/screens/NFTs/ItemsCarousel/ItemsCarousel.module.css
+++ b/frontend-hyprclub/src/screens/NFTs/ItemsCarousel/ItemsCarousel.module.css
@@ -1,19 +1,28 @@
 .carousel {
     align-items: center;
-   display: flex;
+    display: flex;
     width: 100%;
-    overflow-x:auto;
+    overflow-x: auto;
     -ms-overflow-style: none;
     scrollbar-width: none;
     -webkit-overflow-scrolling: touch;
 }
-.carousel::-webkit-scrollbar{
-    display:none;
+
+.carousel::-webkit-scrollbar {
+    display: none;
 }
 
-.card{
-    width:288px !important;
-    height:420px !important;
-    margin: 24px 10px!important;  
+.card {
+    width: 288px !important;
+    height: 420px !important;
+    margin: 24px 10px !important;
     cursor: pointer !important;
+}
+
+@media screen and (max-width:500px) {
+    .carousel {
+        flex-direction: column;
+        overflow-x: none;
+    }
+
 }
